--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Nosso grupo</title>
+    <title>Fomadores em Ação - Jornada 3</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
