--- a/index.html
+++ b/index.html
@@ -6,26 +6,22 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
-      <div class="texto-principal" >
+    <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
         <img id="imagem-principal" src="coding-image.png">
 
-        <h2>O grupo de <b>Estudos de Formadores em Ação</b> tem como objetivo fornecer uma formação
-                continuada para os profissionais de educação da Rede Estadual</h2>
-        <p>Nós fazemos parte do <u>Edutech</u>, que é um programa que ensina alunos e alunas da rede a
-              aprenderem uma nova habilidade: programar!</p>
-        <p>Participantes do Grupo: Marcelo Paludetto (Alura), Olivia (Alura), Professores e professoras (SEED)</p>
+        <h2>O grupo de <b>Estudos de Formadores em Ação</b> tem como objetivo fornecer uma formação continuada para os profissionais de educação da Rede Estadual</h2>
+        <p>Nós fazemos parte do <u>Edutech</u>, que é um programa que ensina alunos e alunas da rede a aprenderem uma nova habilidade: programar!</p>
+        <p>Participantes do Grupo: Professores e professoras</p>
     </div>
 
-  <div class="lista">
-      <h2>Benefícios de participar do grupo de estudos</h2>
-      <ul>
-        <li class="itens">Conhecer os professores e as professoras da SEED</li>
-        <li class="itens">Resolver dúvidas em grupo</li>
-        <li class="itens">Construir espaços para colaboração</li>
-      </ul>
-  </div>
-  
+    <div class="lista">
+        <h2>Benefícios de participar do grupo de estudos</h2>
+        <ul>
+          <li class="itens">Conhecer os professores e as professoras da SEED</li>
+          <li class="itens">Resolver dúvidas em grupo</li>
+          <li class="itens">Construir espaços para colaboração</li>
+        </ul>
+    </div>
   </body>
 </html>
