--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+        <img src="logo seed.png"> 
+
+        <ul>
+          <li>Nosso Grupo</li>
+          <li>Sobre o Formadores</li>
+          <li>Inscrição no Formadores</li>
+          <li>Inscrição na Tutoria</li>
+        </ul>
+    </header>
     <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
         <img id="imagem-principal" src="coding-image.png">
