--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-        <img src="logo seed.png"> 
+        <img id="logo" src="logo seed.png" alt="Logo SEED"> 
 
         <ul>
           <li>Nosso Grupo</li>
