--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <img id="logo" src="logo seed.png" alt="Logo SEED"> 
 
         <ul>
-          <li>Nosso Grupo</li>
-          <li>Sobre o Formadores</li>
-          <li>Inscrição no Formadores</li>
-          <li>Inscrição na Tutoria</li>
+          <li><a href="index.html"> Página Inicial </a></li>
+          <li><a href="historia.html"> Sobre o Formadores </a></li>
+          <li>Mais informações</li>
+          <li>Como participar</li>
         </ul>
     </header>
     <div class="texto-principal" >
