--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <ul>
           <li><a href="index.html"> Página Inicial </a></li>
           <li><a href="historia.html"> Sobre o Formadores </a></li>
-          <li>Mais informações</li>
-          <li>Como participar</li>
+          <li><a href="info.html"> Mais informações </a></li>
+          <li><a href="participar.html"> Como participar </a></li>
         </ul>
     </header>
     <div class="texto-principal" >
