--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <body>
     <header>
         <img id="logo" src="logo seed.png" alt="Logo SEED"> 
-
-        <ul>
-          <li><a href="index.html"> Página Inicial </a></li>
-          <li><a href="historia.html"> Sobre o Formadores </a></li>
-          <li><a href="info.html"> Mais informações </a></li>
-          <li><a href="participar.html"> Como participar </a></li>
-        </ul>
+        <nav>
+          <ul>
+            <li><a href="index.html"> Página Inicial </a></li>
+            <li><a href="historia.html"> Sobre o Formadores </a></li>
+            <li><a href="info.html"> Mais informações </a></li>
+            <li><a href="participar.html"> Como participar </a></li>
+          </ul>
+        </nav>
     </header>
     <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
