--- a/participar.html
+++ b/participar.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Sobre o Formadores</title>
-</head>
-<body>
-    <h1>Em breve...</h1>
-</body>
+<html lang="pt" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Participar</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+        <img id="logo" src="logo seed.png" alt="Logo SEED"> 
+        <nav>
+          <ul>
+            <li><a href="index.html"> Página Inicial </a></li>
+            <li><a href="historia.html"> Sobre o Formadores </a></li>
+            <li><a href="info.html"> Mais informações </a></li>
+            <li><a href="participar.html"> Como participar </a></li>
+          </ul>
+        </nav>
+    </header>
+   </body>
 </html>
