--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>
+      <div class="caixa-nav">
         <img id="logo" src="logo seed.png" alt="Logo SEED"> 
         <nav>
           <ul>
@@ -16,6 +17,7 @@
             <li><a href="participar.html"> Como participar </a></li>
           </ul>
         </nav>
+      </div>
     </header>
     <div class="texto-principal" >
         <h1>Formadores em Ação - Programação Ensino Médio</h1>
