--- a/participar.html
+++ b/participar.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header>
+      <div class="caixa-nav">
         <img id="logo" src="logo seed.png" alt="Logo SEED"> 
         <nav>
           <ul>
@@ -17,6 +18,7 @@
             <li><a href="participar.html"> Como participar </a></li>
           </ul>
         </nav>
+      </div>
     </header>
    </body>
 </html>
