--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <header>
+      <div class="teste">
+
+      </div>
       <div class="caixa-nav">
         <img id="logo" src="logo seed.png" alt="Logo SEED"> 
         <nav>
